Crash because of crop node and manipulators do not work. #35349

Closed
opened 2013-05-14 10:41:32 +02:00 by paul geraskin · 4 comments
Member

%%%--- Operating System, Graphics card ---
linux 64 bit, nvidia gtx 560.

- Blender version with error, and version that worked ---

2.66.6 - buildbot

- Short description of error ---

2 bugs with the same blend file:

  1. I cannot rotate/scale any object with manipulators.

  2. When i render an image i get crash. I guess it's because of crop node. If i mute crop node i get the rendered image without crash.

    • Steps for others to reproduce the error (preferably based on attached .blend file) ---
      Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/kc_buildings_001_castle_level2_08.blend%%%
%%%--- Operating System, Graphics card --- linux 64 bit, nvidia gtx 560. - Blender version with error, and version that worked --- 2.66.6 - buildbot - Short description of error --- 2 bugs with the same blend file: 1) I cannot rotate/scale any object with manipulators. 2) When i render an image i get crash. I guess it's because of crop node. If i mute crop node i get the rendered image without crash. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Blend file: https://dl.dropboxusercontent.com/u/26887202/blender/kc_buildings_001_castle_level2_08.blend%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Some issue with viewer nodes, writes to bad buffer pointer, assigned to self.%%%

%%%Some issue with viewer nodes, writes to bad buffer pointer, assigned to self.%%%
Member

%%%Fixed the viewer node crash in r56791.
The manipulator issue was just the "Manipulate center points" setting being activated.%%%

%%%Fixed the viewer node crash in r56791. The manipulator issue was just the "Manipulate center points" setting being activated.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35349
No description provided.